--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -1,7 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h4><%= @link.title %></h4><br>
-<%= @link.url %><br>
+<%= render 'link' %>
 
 <%= link_to 'Edit', edit_link_path(@link) %> |
 <%= link_to 'Back', links_path %>
