--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -1,6 +1,10 @@
 <p id="notice"><%= notice %></p>
 
-<%= render 'link' %>
+<h4><%= @link.title %></h4><br>
+<% if @link.image? %>
+	<a href="<%= @link.url %>"><img src="<%= @link.url %>"></a>
+<% else %>
+	<%= @link.url %><br>
+<% end %>
 
-<%= link_to 'Edit', edit_link_path(@link) %> |
 <%= link_to 'Back', links_path %>
