--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -1,10 +1,9 @@
 <p id="notice"><%= notice %></p>
 
-<h4><%= @link.title %></h4><br>
 <% if @link.image? %>
 	<a href="<%= @link.url %>"><img src="<%= @link.url %>"></a>
 <% else %>
-	<%= @link.url %><br>
+	<%= link_to @link.title, @link.url %><br>
 <% end %>
 
 <%= link_to 'Back', links_path %>
